# fact-checker

./: .env.example  .gitignore  00_START_HERE.md  AGENTS.md  ANALYSIS_0_3.md  ANALYSIS_REPORT_0_3.md  DESIGN.md  EXTRACTOR_IMPLEMENTATION_PLAN.md  FUNCTION_HIERARCHY_mod.txt  IMPLEMENTATION_6_2_4a_tmp.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_ERROR_HANDLING.md  IMPLEMENTATION_PLAN_EXTERNAL_SOURCES.md  IMPLEMENTATION_SUMMARY.md  LLM_CONFIGURATION_PROPOSAL.md  LOGGING_DUMP_RECOMMENDATION.md  PHASE_0_COMPLETE.md  PROPOSAL_extract_claim_workflow.md  README.md  README_WRAPPERS.md  TEST_EXECUTION_GUIDE_6_2_4bcd.txt  TEST_HIERARCHY2_mod.txt  TEST_HIERARCHY_mod.txt  TODO_factchecker.md  VERIFY_CLAIMS_IMPLEMENTATION_PLAN.md  activate.sh  check_syntax.py  dev.py  factchecker.drawio  format_code.py  lint_check.py  list_all_tests.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_logging_tests.py  validate_tests.py
src/factchecker/: __init__.py  debug_utils.py  logging_config.py
src/factchecker/core/: __init__.py  interfaces.py  llm_config.py  llm_helpers.py  llm_provider.py  models.py  sources_config.py
src/factchecker/core/tests/: test_interfaces.py  test_models.py
src/factchecker/extractors/: __init__.py  base.py  claim_combiner.py  image_extractor.py  image_handler.py  text_extractor.py  text_image_extractor.py
src/factchecker/extractors/tests/: conftest.py  test_image_extractor.py  test_text_extractor.py
src/factchecker/pipeline/: __init__.py  factcheck_pipeline.py  stages.py
src/factchecker/processors/: __init__.py  base.py  response_generator.py  result_analyzer.py
src/factchecker/processors/tests/: __init__.py  test_response_generator.py  test_result_analyzer.py
src/factchecker/searchers/: __init__.py  base.py  bluesky_searcher.py  government_searcher.py  news_searcher.py  twitter_searcher.py
src/factchecker/searchers/tests/: __init__.py  test_bluesky_searcher.py  test_twitter_searcher.py
src/factchecker/storage/: __init__.py  cache.py  database.py
src/factchecker/storage/tests/: test_cache.py
src/factchecker/tests/: __init__.py  conftest.py  fixtures.py  test_logging_config.py  test_pipeline.py
tests/: __init__.py  conftest.py  test_llm_provider.py
tests/images/: not_an_image.txt
tests/integration/: test_end_to_end.py  test_whatsapp_integration.py
tests/performance/: test_latency.py
